k8s/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screenshot-app
  annotations:
    argocd-image-updater.argoproj.io/image-list: screenshot-app=almogmaman762/screenshot-app
    argocd-image-updater.argoproj.io/screenshot-app.force-update: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: screenshot-app
  template:
    metadata:
      labels:
        app: screenshot-app
    spec:
      containers:
      - name: screenshot-app
        image: almogmaman762/screenshot-app@sha256:b3ffd19df97f244e9f28aaad8d93d985635384bcbe3dda7127c96db8141d942e    # Will be updated by image-updater
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
