k8s/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: screenshot-app
spec:
  selector:
    app: screenshot-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
